--- a/app/src/main/res/values-ru/strings.xml
+++ b/app/src/main/res/values-ru/strings.xml
@@ -6,4 +6,5 @@
     <string name="tickets_text">Tickets</string>
     <string name="type_message_hint_text">Type a message</string>
     <string name="admin_console_text">Admin Console</string>
+    <string name="ticket_status_heading_view">Ticket Status</string>
 </resources>
