--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -5,4 +5,12 @@
     <string name="tickets_text">Tickets</string>
     <string name="type_message_hint_text">Type a message</string>
     <string name="admin_console_text">Admin Console</string>
+    <string name="ticket_status_heading_view">Ticket Status</string>
+
+    <string-array name="ticket_status">
+        <item>open</item>
+        <item>pending</item>
+        <item>closed</item>
+    </string-array>
+
 </resources>
